--- a/app/globals.css
+++ b/app/globals.css
@@ -36,11 +36,11 @@
   font-weight: 100;
 }
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
 }
+
 body {
-  @apply bg-neutral-200;
+  @apply bg-[#0D0D0D];
 }
